--- a/Week_6/api-no-db-demo/package.json
+++ b/Week_6/api-no-db-demo/package.json
@@ -1,7 +1,6 @@
 {
   "name": "api-no-db-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,6 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
